--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="contact-info">
                 <p class="mb-2"><strong class="me-2">Email:</strong> <a href="mailto:9abhranil@gmail.com">9abhranil@gmail.com</a></p>
                 <p class="mb-2"><strong class="me-2">Phone:</strong> <a href="tel:+918167275474">8167275474</a></p>
-                <p class="mb-0"><strong class="me-2">Address:</strong> Udayan, Kalna Gate, Burdwan</p>
+                <p class="mb-0"><strong class="me-2">Address:</strong> Udayan, Kalna Gate, Burdwan, Pin: 713101</p>
             </div>
         </section>
     </main>
