--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                     <small>GPA: 9.04</small>
                 </div>
                 <div class="list-group-item list-group-item-action">
-                    <h3 class="h5 mb-1">Science Higher Secondary</h3>
+                    <h3 class="h5 mb-1">Higher Secondary</h3>
                     <p class="mb-1 text-muted">Burdwan Municipal High School | Burdwan | May 2017 - May 2019</p>
                     <small>Percentage: 88.33%</small>
                 </div>
                 <div class="list-group-item list-group-item-action">
-                    <h3 class="h5 mb-1">General Secondary</h3>
+                    <h3 class="h5 mb-1">Secondary</h3>
                     <p class="mb-1 text-muted">Burdwan Municipal High School | Burdwan | Mar 2017</p>
                     <small>Percentage: 90.71%</small>
                 </div>
@@ -100,9 +100,12 @@
                 <span class="skill-badge">HTML</span>
                 <span class="skill-badge">CSS</span>
                 <span class="skill-badge">JavaScript</span>
-                <span class="skill-badge">React</span>
-                <span class="skill-badge">Bootstrap</span>
                 <!-- Kept as it's a core concept -->
+            </div>
+            <h3 class="h6 text-muted mb-2">Frameworks:</h3>
+            <div class="d-flex flex-wrap justify-content-center mb-4">
+                <span class="skill-badge">Bootstrap</span>
+                <span class="skill-badge">React.js</span>
             </div>
             <h3 class="h6 text-muted mb-2">Tools & Platforms:</h3>
             <div class="d-flex flex-wrap justify-content-center mb-4">
@@ -131,6 +134,7 @@
                     <h3 class="h5 mb-1">A Portfolio Website</h3>
                     <p class="mb-1 text-muted">HTML, CSS, JavaScript</p>
                     <small>A portfolio website is a digital resume that showcases the skills, creativity, and accomplishments that define an individual.</small>
+                    <a href="https://hellrider-2000.github.io/My-portfolio-website/" class="project-link text-primary" target="_blank">View Project</a>
                 </div>
                 <div class="list-group-item list-group-item-action">
                     <h3 class="h5 mb-1">Homepage for Restaurant</h3>
@@ -156,34 +160,42 @@
                 <div class="list-group-item list-group-item-action">
                     <h3 class="h5 mb-1">SQL Foundations</h3>
                     <p class="mb-1 text-muted">Microsoft</p>
+                    <a href="https://coursera.org/verify/25ORLJ861PUH" class="certification-link text-primary" target="_blank">View Certificate</a>
                 </div>
                 <div class="list-group-item list-group-item-action">
                     <h3 class="h5 mb-1">Version Control</h3>
                     <p class="mb-1 text-muted">Meta</p>
+                    <a href="https://www.coursera.org/account/accomplishments/verify/A4YC4I51JB6V" class="certification-link text-primary" target="_blank">View Certificate</a>
                 </div>
                 <div class="list-group-item list-group-item-action">
                     <h3 class="h5 mb-1">Programming with JavaScript</h3>
                     <p class="mb-1 text-muted">Meta</p>
+                    <a href="https://www.coursera.org/account/accomplishments/verify/QC9TFQ3E4Z5C" class="certification-link text-primary" target="_blank">View Certificate</a>
                 </div>
                 <div class="list-group-item list-group-item-action">
                     <h3 class="h5 mb-1">Introduction to Web Development with HTML, CSS, JavaScript</h3>
                     <p class="mb-1 text-muted">Coursera</p>
+                    <a href="https://www.coursera.org/account/accomplishments/records/FS4C4ZF3F44B" class="certification-link text-primary" target="_blank">View Certificate</a>
                 </div>
                 <div class="list-group-item list-group-item-action">
                     <h3 class="h5 mb-1">Python Data Structures</h3>
                     <p class="mb-1 text-muted">University of Michigan</p>
+                    <a href="https://www.coursera.org/account/accomplishments/records/TEHAXI4H8MLF" class="certification-link text-primary" target="_blank">View Certificate</a>
                 </div>
                 <div class="list-group-item list-group-item-action">
                     <h3 class="h5 mb-1">Programming for Everybody (Getting Started with Python)</h3>
                     <p class="mb-1 text-muted">University of Michigan</p>
+                    <a href="https://www.coursera.org/account/accomplishments/records/DCGMG412JCQY" class="certification-link text-primary" target="_blank">View Certificate</a>
                 </div>
                 <div class="list-group-item list-group-item-action">
                     <h3 class="h5 mb-1">learn python: the complete python programming course</h3>
                     <p class="mb-1 text-muted">Udemy</p>
+                    <a href="https://www.ude.my/UC-aa035875-430e-4562-8022-0d4b2d9e2384" class="certification-link text-primary" target="_blank">View Certificate</a>
                 </div>
                 <div class="list-group-item list-group-item-action">
                     <h3 class="h5 mb-1">An Introduction to Programming the Internet of Things (IOT) Specialization</h3>
                     <p class="mb-1 text-muted">University of California, Irvine Division of Continuing Education | Coursera</p>
+                    <a href="https://www.coursera.org/account/accomplishments/specialization/J9PBFH3GLJ3T" class="certification-link text-primary" target="_blank">View Certificate</a>
                 </div>
             </div>
         </section>
